<resources>
    <string name="app_mode_incompat_cancel_button">Cancel</string>
    <string name="app_mode_incompat_dialog_description">Turn on tracking to use this app.</string>
    <string name="app_mode_incompat_dialog_title">Can\'t Open App</string>
    <string name="app_mode_incompat_tracking_button">Turn On Tracking</string>
    <string name="app_name">Oculus App Runtime</string>
    <string name="certificate_expired_body">Your enterprise certificate has expired.</string>
    <string name="certificate_expired_title">Enterprise Certificate Expired</string>
    <string name="certificate_expiring_warning_text_days">Your enterprise certificate will expire in %1$d days.</string>
    <string name="certificate_expiring_warning_text_one_day">Your enterprise certificate will expire in 1 day.</string>
    <string name="certificate_expiring_warning_text_today">Your enterprise certificate will expire today.</string>
    <string name="certificate_expiring_warning_text_uncertain">Your enterprise certificate will expire in less than 2 weeks.</string>
    <string name="certificate_expiring_warning_title">License Expiring Soon</string>
    <string name="controller_repairing_line1">Press the button to begin controller pairing.</string>
    <string name="controllers_req_back_button">Go Back</string>
    <string name="controllers_req_cont_button">Continue</string>
    <string name="controllers_req_desc">Please use a controller to continue setting up a roomscale Guardian boundary.</string>
    <string name="controllers_req_pt_portal_desc">Please use a controller to continue setting up a Passthrough Keyboard area.</string>
    <string name="controllers_req_title">Controller Required</string>
    <string name="debug_device_config_cached_value">DeviceConfig Service Value\10(default from MobileConfig)</string>
    <string name="debug_device_config_cancel_override">❌</string>
    <string name="debug_device_config_clear_all_overrides">Clear all overridden values (%d)</string>
    <string name="debug_device_config_clear_override">Clear</string>
    <string name="debug_device_config_fetching_all_params">Fetching DeviceConfig params...</string>
    <string name="debug_device_config_filter_value">Filter DeviceConfig name</string>
    <string name="debug_device_config_get_service_value">Fetch Service Value</string>
    <string name="debug_device_config_hide_service_value_column">MobileConfig service value: OFF</string>
    <string name="debug_device_config_list_info_loaded">%d configs params loaded</string>
    <string name="debug_device_config_list_info_loading">Loading...</string>
    <string name="debug_device_config_name">DeviceConfig Name</string>
    <string name="debug_device_config_refresh_list">Refresh</string>
    <string name="debug_device_config_service_value">MobileConfig Service Value</string>
    <string name="debug_device_config_show_service_value_column">MobileConfig service value: ON</string>
    <string name="debug_feature_save">��</string>
    <string name="debug_panel_title">Debug Settings</string>
    <string name="dialog_system_ota_acknowledge">OK</string>
    <string name="dialog_system_ota_error_title">Error</string>
    <string name="dialog_system_ota_failure_title">Device Update in Progress</string>
    <string name="dialog_system_ota_update_instructions">This app requires the latest Oculus software version. Please leave your headset on, connected to Wi-Fi and plugged into a power source. Your headset will restart when the update is complete.</string>
    <string name="dogfood_accept_button_text">Update OS</string>
    <string name="dogfood_accept_reset_button_text">Reset Apps</string>
    <string name="dogfood_assignment_description_text">Description</string>
    <string name="dogfood_assignment_name_text">Assignment</string>
    <string name="dogfood_assignment_survey_text">Survey</string>
    <string name="dogfood_assignments_info_text">Dogfood Assignments</string>
    <string name="dogfood_build_info_text">These are the current builds of apps that are on your headset. You can view the latest builds in oculus browser by selecting an app.</string>
    <string name="dogfood_channel">Dogfooding Channel:</string>
    <string name="dogfood_current_os_build">Current OS DisplayName:</string>
    <string name="dogfood_fast_dogfood_channel">Fast</string>
    <string name="dogfood_info_title_text">Debug Only: OTA Status Details</string>
    <string name="dogfood_no_update_button_text">Back</string>
    <string name="dogfood_no_update_ota_text">No updates available.</string>
    <string name="dogfood_panel_title">Oculus Quest Dogfooding</string>
    <string name="dogfood_reboot_request">Please reboot your headset for the update to install.</string>
    <string name="dogfood_reject_button_text">Exit</string>
    <string name="dogfood_reject_reset_button_text">Cancel</string>
    <string name="dogfood_reset_OS_builds">Are you sure you want to reset all sideloaded updates?</string>
    <string name="dogfood_reset_button_text">Reset</string>
    <string name="dogfood_slow_dogfood_channel">Slow</string>
    <string name="dogfood_unknown_dogfood_channel">Unknown</string>
    <string name="dogfood_update_ota_text">Your headset will download the update.</string>
    <string name="dogfood_waiting_for_update">Checking Updates...</string>
    <string name="enterprise_guardian_disabled_warning_dialog_description">This experience requires you to be in a stationary position. Please clear the space around you before beginning and remain seated in the same place while in this experience. Listen to and follow any instructions from your administrator.</string>
    <string name="enterprise_guardian_disabled_warning_dialog_title">Important Safety Information</string>
    <string name="entitlement_sharing_detected_description">This app must be purchased separately to be used by multiple devices at the same time. To continue, quit this app on any other devices.</string>
    <string name="entitlement_sharing_detected_title">Multiple Devices Can\'t Access This App at the Same Time</string>
    <string name="gauntlet_test_panel_exit_button">✖</string>
    <string name="gauntlet_test_panel_title">Gauntlet Test</string>
    <string name="guardian_acknowledge_pt_warning">OK</string>
    <string name="guardian_acknowledge_quickboot_nux">Ok</string>
    <string name="guardian_adjust_desk_height_body_controller">&lt;p&gt;Place the controller ring on top of your desk, then press the trigger button to continue.&lt;/p&gt;&lt;p&gt;You can skip this step if the desk height already looks accurate.&lt;/p&gt;</string>
    <string name="guardian_adjust_desk_height_title">Set Desk Height</string>
    <string name="guardian_adjust_dialog_cancel">Cancel</string>
    <string name="guardian_adjust_dialog_description">Choose what kind of boundary you want to create.</string>
    <string name="guardian_adjust_dialog_roomscale">Roomscale</string>
    <string name="guardian_adjust_dialog_stationary">Stationary</string>
    <string name="guardian_adjust_dialog_title">Create Guardian Boundary</string>
    <string name="guardian_boundary_body_hand_imperial">Look down at the floor and hold your hand out in front of you. Pinch and hold your thumb and index finger together to draw along the boundary of your play area. &lt;br/&gt;&lt;br/&gt;We recommend a play area size of 6.5ft x 6.5ft or greater for roomscale experiences.</string>
    <string name="guardian_boundary_body_hand_metric">Look down at the floor and hold your hand out in front of you. Pinch and hold your thumb and index finger together to draw along the boundary of your play area. &lt;br/&gt;&lt;br/&gt;We recommend a play area size of 2m x 2m or greater for roomscale experiences.</string>
    <string name="guardian_boundary_body_imperial">Point your controller at the floor, then press and hold the trigger to draw along the boundary of your cleared play area. &lt;br/&gt;&lt;br/&gt;We recommend a play area size of 6.5ft x 6.5ft or greater for roomscale experiences.</string>
    <string name="guardian_boundary_body_metric">Point your controller at the floor, then press and hold the trigger to draw along the boundary of your cleared play area. &lt;br/&gt;&lt;br/&gt;We recommend a play area size of 2m x 2m or greater for roomscale experiences.</string>
    <string name="guardian_boundary_title">Define Play Area</string>
    <string name="guardian_btn_acknowledge">Acknowledge</string>
    <string name="guardian_btn_cancel">Cancel</string>
    <string name="guardian_btn_change">Change</string>
    <string name="guardian_btn_confirm">Confirm</string>
    <string name="guardian_btn_confirm_guardian">Confirm</string>
    <string name="guardian_btn_continue">Continue</string>
    <string name="guardian_btn_enable_3dof">Continue</string>
    <string name="guardian_btn_quit_app">Quit App</string>
    <string name="guardian_btn_reset">Reset</string>
    <string name="guardian_btn_roomscale">Roomscale Boundary</string>
    <string name="guardian_btn_skip">Switch to stationary boundary</string>
    <string name="guardian_btn_stationary">Stationary Boundary</string>
    <string name="guardian_btn_try_again">Redraw</string>
    <string name="guardian_cancel_couch_flow_button">Cancel</string>
    <string name="guardian_cancel_desk_flow_button">Cancel</string>
    <string name="guardian_cancel_pt_portal_flow_button">Cancel</string>
    <string name="guardian_cancel_surface_editing_button">Cancel</string>
    <string name="guardian_cancel_type_selection_button">Cancel</string>
    <string name="guardian_cancel_whiteboard_flow_button">Cancel</string>
    <string name="guardian_confirm_couch_body">Make sure the surface lines up with your couch seat.</string>
    <string name="guardian_confirm_couch_confirm_button">Confirm</string>
    <string name="guardian_confirm_couch_guardian_body">Please confirm that you are entering the couch space.</string>
    <string name="guardian_confirm_couch_redraw_button">Redraw</string>
    <string name="guardian_confirm_couch_title">Confirm Couch</string>
    <string name="guardian_confirm_desk_body">Make sure the surface lines up with your real desk.</string>
    <string name="guardian_confirm_desk_confirm_button">Confirm</string>
    <string name="guardian_confirm_desk_guardian_body">Make sure the surface lines up with your real desk.</string>
    <string name="guardian_confirm_desk_redraw_button">Redraw</string>
    <string name="guardian_confirm_desk_title">Confirm Desk</string>
    <string name="guardian_confirm_pt_portal_body">Press Confirm to accept the keyboard area or Redraw to define a new one.</string>
    <string name="guardian_confirm_pt_portal_confirm_button">Confirm</string>
    <string name="guardian_confirm_pt_portal_redraw_button">Redraw</string>
    <string name="guardian_confirm_pt_portal_title">Confirm Keyboard Area</string>
    <string name="guardian_confirm_surface_editing_body">Please edit the surface and confirm it</string>
    <string name="guardian_confirm_surface_editing_button">Confirm</string>
    <string name="guardian_confirm_surface_editing_title">Customize MR Surfaces</string>
    <string name="guardian_confirm_whiteboard_body">Check to make sure that the virtual whiteboard plane matches up to your real whiteboard.</string>
    <string name="guardian_confirm_whiteboard_confirm_button">Confirm</string>
    <string name="guardian_confirm_whiteboard_guardian_body">Please confirm that you are entering the whiteboard space.</string>
    <string name="guardian_confirm_whiteboard_redraw_button">Redraw</string>
    <string name="guardian_confirm_whiteboard_title">Confirm Whiteboard</string>
    <string name="guardian_create">Create Guardian</string>
</resources>