<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:gravity="left|center_vertical|center_horizontal|center|start" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="25dp" android:layout_marginRight="25dp" android:layout_marginBottom="25dp">
    <TextView android:gravity="right" android:id="@+id/device_config_label" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="0.3" android:layout_marginEnd="20dp"/>
    <Button android:gravity="center" android:id="@+id/device_config_override" android:padding="2dp" android:visibility="gone" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="0.3" android:layout_marginEnd="5dp"/>
    <Button android:gravity="center" android:id="@+id/device_config_clear_override" android:padding="2dp" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/debug_device_config_clear_override" android:layout_marginEnd="5dp"/>
    <EditText android:gravity="center" android:id="@+id/device_config_edittext" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLines="1" android:layout_weight="0.2"/>
    <Button android:gravity="center" android:id="@+id/device_config_save_override" android:padding="2dp" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/debug_feature_save" android:layout_marginEnd="5dp"/>
    <Button android:gravity="center" android:id="@+id/device_config_cancel_override" android:padding="2dp" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/debug_device_config_cancel_override" android:layout_marginEnd="10dp"/>
    <TextView android:gravity="center" android:id="@+id/device_config_service_value" android:visibility="gone" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="0.3" android:layout_marginEnd="10dp"/>
</LinearLayout>
